UserAbstract.php FrontControllerAbstract.php

--- a/site-frame/app/config/config.ini
+++ b/site-frame/app/config/config.ini
@@ -1,17 +1,25 @@
 [path]
 root = ROOT_PATH
-lib = ROOT_PATH'/../Xorc/'
-app = ROOT_PATH'/app/'
+lib = ROOT_PATH'/../lib/php/include/'
+app = ROOT_PATH'/../'
+
 controllers = ROOT_PATH'/app/controllers/'
 views = ROOT_PATH'/app/views/'
 models = ROOT_PATH'/app/models/'
+
 config = ROOT_PATH'/app/config/'
+data = ROOT_PATH'/data/'
+legislationBase = ROOT_PATH'/data/legislation/base/'
+legislationPrep = ROOT_PATH'/data/legislation/prep/'
+
+[ns]
+controllers = Juristinform\app\controllers\
 
 [db]
 server = localhost
-db = 
-user = 
-password = 
+db = juristinform
+user = root
+password = tylerd
 
 [server]
 baseurl = ''
@@ -19,5 +27,14 @@ baseurl = ''
 [debug]
 loaded = 'Config is loaded<br />'
 
-[secret]
-invite = 'tylerd(21}'
+[mail]
+;type = phpmail
+type = smtp
+from = jckv@yandex.ru
+charset = utf-8
+contentType = html
+;contentType = plain
+smtpHost = smtp.yandex.ru
+smtpPort = 25
+smtpUser = jckv
+smtpPassword = 'tylerd(21)'
